[package]
name = "lime"
version = "0.1.0"
edition = "2021"
description = "A minimalist backend engine for rapid service creation"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.0"
redis = { version = "0.22", features = ["tokio-native-tls"] }
async-trait = "0.1"
http = "0.2"
urlencoding = "2.1"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
parking_lot = "0.12.5"
rand_core = "0.9.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
testcontainers = "0.15"
testcontainers-modules = "0.1"
serde_test = "1.0"